traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Erreur de compilation :
TraversalByColumn:1: error: not found: value &&
  if (getX()==getMondeLargeur()-1) && (getY()==getMondeHauteur()-1) {
                                   ^TraversalByColumn:16: error: type mismatch;
 found   : Int
 required: String
      ecritMessage(cpt:String)
                   ^